[package]
name = "csv2par"
version = "0.6.0"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/domoritz/csv2parquet"
description = "Convert CSV files to Parquet"

[dependencies]
parquet = "28.0.0"
arrow = "28.0.0"
arrow-schema = { version = "28.0.0", features = ["serde"] }
serde_json = "1.0.89"
clap = { version = "4.0.26", features = ["derive"] }
